<resources>
    <string name="app_name">NextzyIntership</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="loading">Loading</string>
    <string name="sample">Sample</string>
    <string name="hello_user">Hello, %1s</string>
    <string name="add_new_user">Add New User</string>
    <string name="signed_in_message">You\'re signed in</string>
    <string name="complete_message">Congratulation! You\'re finished this internship test.</string>
</resources>
